Kubernetes/AgrOne/ceph/ceph-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-ingress
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 80


---

apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  uid: 89c8c97c-c9e9-4267-b0a3-6f7052237002
  resourceVersion: '1115805'
  creationTimestamp: '2024-01-30T11:46:34Z'
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  ownerReferences:
    - apiVersion: ceph.rook.io/v1
      kind: CephCluster
      name: rook-ceph
      uid: fadaf22a-2348-4574-9d3c-5136e830c0b8
      controller: true
      blockOwnerDeletion: true
  managedFields:
    - manager: rook
      operation: Update
      apiVersion: v1
      time: '2024-01-30T11:46:39Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
            f:rook_cluster: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"fadaf22a-2348-4574-9d3c-5136e830c0b8"}: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":8443,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
  selfLink: /api/v1/namespaces/rook-ceph/services/rook-ceph-mgr-dashboard
status:
  loadBalancer: {}
spec:
  ports:
    - name: https-dashboard
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: rook-ceph-mgr
    mgr_role: active
    rook_cluster: rook-ceph
  # clusterIP: 10.104.197.45
  # clusterIPs:
  #   - 10.104.197.45
  type: NodePort
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
